--- a/pagelogin.html
+++ b/pagelogin.html
@@ -100,7 +100,7 @@
   
         <p class="text-center text-sm text-gray-500">
           No account?
-          <a class="underline" href="pagesignup.html">Sign up</a>
+          <a class="underline" href="pageregister.html">Sign up</a>
         </p>
       </form>
     </div>
