--- a/About.html
+++ b/About.html
@@ -21,7 +21,7 @@
             </div>
       
             <img
-              src="https://images.unsplash.com/photo-1731690415686-e68f78e2b5bd?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhhiuoSxxNE0XhitrlwbrJcuT3jkFrah-rgw&s" width="1000" height="500"
               class="rounded"
               alt=""
             />
