--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <div class="flex items-center gap-4">
                 <div class="sm:flex sm:gap-4">
                   <a 
-                    cwlass="rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white shadow-sm"
+                     class="rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600"
                     href="pagelogin.html"
                   >
                     Login
