--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </svg>
               </a>
             </div>
-            <a class="text-gray-500 transition hover:text-gray-400/75" href="homepage.html">ambaShop </b>
+            <a class="text-gray-500 transition hover:text-gray-400/75" href="index.html">ambaShop </b>
             <div class="md:flex md:items-center md:gap-12">
               <nav aria-label="Global" class="hidden md:block">
                 <ul class="flex items-center gap-6 text-sm">
